Table with responses
The responses that I have are in here and the static code for formatting

--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
 									<header class="major">
 										<h2>MITvote Events</h2>
 									</header>
-									<p>Nothing right now - check back soon!</p>
+									<!-- <p>Nothing right now - check back soon!</p> -->
 									<div class="posts">
 										<article>
 											<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
-											<!-- <h3>MITvote General Body Meeting / Info Session</h3>
-											<p>Want to get involved with MITvote? Come learn about what we do and how can help on Monday, September 9th at 5pm in room 2-131. We'd love to see you there!</p> -->
-											<!-- <ul class="actions">
-												<li><a href="https://www.facebook.com/MITvote/" class="button"  target="_blank">More</a></li>
-											</ul> -->
+											<h3>Cambridge City Council Candidate Forum</h3>
+											<p>Hear a panel of former councilors talk about the role of the Cambridge City Council on student life, and meet the 2019 candidates. Discuss issues like housing, transportation, and climate change. Free dinner and desserts!! </p>
+											<ul class="actions">
+												<li><a href="https://www.facebook.com/events/922869911423090/" class="button"  target="_blank">More</a></li>
+											</ul>
 										</article>
 										<!-- <article>
 											<h3>Chancellor's Ice Cream Social</h3>
