--- a/2019-election.html
+++ b/2019-election.html
@@ -67,7 +67,7 @@
 									<p>There are issues at stake in this city council election that are of direct importance to students here at MIT. To check out candidates responses to our survey on housing availability, transportation, international student issues and more, check out the table below: click on the text to make it expand</p>
 
 									<div class="table-wrapper">
-										<table>
+										<table style="table-layout: fixed">
 											<thead>
 												<tr>
 													<th width="150px">Name</th>
@@ -80,7 +80,7 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td style="white-space: normal">Doc entitled ANSWERS from 9/23 email</td>
+													<td style="white-space: normal"><b>Doc entitled ANSWERS from 9/23 email</b></td>
 													<td onClick="expandTable(this)">Rents are too high and there is an influx of new residents.  Every structure should have 25% affordable housing in them.</td>
 													<td onClick="expandTable(this)">More guard crossings, cross walks and visibility on high use lines.</td>
 													<td onClick="expandTable(this)">Invite them into city hall, invite them into forums and get their names and ideas. And follow up on that. I do NOT support voting for non-citizens</td>
@@ -88,7 +88,7 @@
 													<td onClick="expandTable(this)">I feel that student loan debt is the largest issue facing students today.  I support no interest loans and debt forgiveness for low income.</td>
 												</tr>
 												<tr>
-													<td style="white-space: normal">Siddiqui</td>
+													<td style="white-space: normal"><b>Sumbul Siddiqui</b></td>
 													<td onClick="expandTable(this)">There are a combination of causes. Cambridge’s tremendous resources, economic growth,
 commercial development, and desirability creates the demand for housing, which has outpaced
 supply. Consequently, prices have increased significantly, making affordable options scarce. At
@@ -200,7 +200,7 @@ Cambridge to power all publicly owned or operated facilities with 100% renewable
 2025.</td>
 												</tr>
 												<tr>
-													<td style="white-space: normal">Adriane Musgrave</td>
+													<td style="white-space: normal"><b>Adriane Musgrave</b></td>
 													<td onClick="expandTable(this)"> tldr: more demand than supply
 While Cambridge has always been a highly desirable place to live, recent market forces
 and broad trends have significantly increased the demand for living here (and the
@@ -332,7 +332,7 @@ afford care, typically the mom steps back from the workforce, making it harder f
 women to advance their careers and earn the wages they deserve.</td>
 												</tr>
 												<tr>
-													<td style="white-space: normal">Burhan</td>
+													<td style="white-space: normal"><b>Burhan Azeem</b></td>
 													<td onClick="expandTable(this)">Here’s the problem
 People want to live in cities. They are diverse and welcoming. They are full of character and
 community. They have good jobs, public transportation, and great schools & universities.
@@ -475,7 +475,7 @@ ensure these projects are resilient to increasing risks of floods and other natu
 disasters.</td>
 												</tr>
 												<tr>
-													<td style="white-space: normal">E. Denise Simmons</td>
+													<td style="white-space: normal"><b>Denise Simmons</b></td>
 													<td onClick="expandTable(this)">The causes of the scarcity of affordable housing are a confluence of factors: Cambridge continues
 to feel the impact of the statewide loss of Rent Control in the mid-1990s. At the same time,
 Kendall Square has been built up into one of the premier hubs of the biotech sector on the planet,
@@ -543,7 +543,7 @@ the	City.
 </td>
 												</tr>
 												<tr>
-													<td style="white-space: normal">Item 6 - entitled MIT 2019</td>
+													<td style="white-space: normal"><b>Item 6 - entitled MIT 2019</b></td>
 													<td onClick="expandTable(this)">Unfortunately, there is no silver bullet to addressing our housing crisis. Like so many complex issues we must attack this crisis on many fronts. Cambridge used to be a city where young people would come for college, fall in love with the community, and stay and raise a family. Sadly, that is out of reach for most students today. We are a highly desirable city to live in, with a strong job market and we simply have not produced enough housing to meet the need.  While serving on the City Council, addressing this issue has been my top priority. In my first term 6 years ago, I was a leader in more than tripling the amount of money commercial developers must pay to the city for the preservation and construction of affordable housing. In my next term, I led the effort to almost double the amount of affordable housing for-profit, residential developers provide the city, from 11.5% to 20%, the highest percentage in the State. This term, I have been the leading voice in support of the Affordable Housing Overlay, which would make building 100% affordable housing more financially viable across our city. I also started the city’s first, Task Force on Tenant Displacement, so we can address issues of eviction and condo-conversion. However, even with all of these efforts, we have more work to do. I also support building more housing of all types. During the last recession there was no housing being built in Cambridge and we saw the greatest rent increases since the loss of rent control. Over the past several years, as more housing has been built, rent prices have declined. Building housing works. If re-elected, I would look to further the work of the Task Force on Tenant Displacement, look to pass a transfer fee on re-estate sales over $2 million, with that money going to the Affordable Housing Trust, I would continue to fight for building more housing, particularly affordable housing, would look to create a “gap voucher” program where the City would fund the gap between were housing vouchers max out and where market rent begins. I want students of the present to have the same opportunities as students of the past. Our students and graduates are the future leaders of this community, not just politically, but with the skills they will bring to our job market.</td>
 													<td onClick="expandTable(this)">I am proud to have authored a first of its kind ordinance that requires the City of Cambridge to build protected bike lanes during major street construction. New York, Seattle and Washington D.C. are now using this ordinance to create their own. This will make commuting safer for everyone. I also supported the City allocating over $20 million to save the Green Line Extension which was threatened due to a lack of funding. The City currently contributes $8 million to the MBTA to improve service on the Red and Green Lines. I am talking with the City Manager about increasing those funds provided the MBTA puts them towards improving service, cleanliness and safety. These efforts, and many others are vital to not only creating a safe city for all modes of transportation, but to address climate change. I’m terrified of the world my children will inherit and we must do everything we can, large and small, to ensure a sustainable future.</td>
 													<td onClick="expandTable(this)">I sponsored a policy order asking for the State to allow non-citizens to vote in local elections, so I am leading in that area. I also started the Cambridge Legal Defense Fund for Immigrants that has raised close to $300,000 to provide legal support and representation to immigrants who live and work in Cambridge. We have now expanding this program into Somerville. I have also testified at the State House in support of the Safe Communities Act, as well as written an Op-Ed in the Globe calling on the legislature to pass this important bill. When the Trump administration “threatened” to send asylum seekers to sanctuary cities, I went on Fox and Friends and said that Cambridge would welcome them with open arms and called Trump out on his racist and xenophobic policies. 
@@ -558,7 +558,7 @@ As far as how I would civically engage international students, I have spoken at 
 </td>
 												</tr>
 												<tr>
-													<td style="white-space: normal"> Nicola Will</td>
+													<td style="white-space: normal"><b>Nicola Will</b></td>
 													<td onClick="expandTable(this)">There are many underlying causes for the scarcity of affordable housing for students, including the high-income industries Cambridge has attracted, the increase in commercial space from developers, lack of funding from universities, and the fact that there isn’t enough affordable housing for anyone in Cambridge. At last count, the waitlist for affording housing through the Cambridge Housing Authority was more than 19,000 people. For a wealthy city like Cambridge, which has universities with endowments over a billion dollars, this is completely unacceptable. It not only negatively impacts our residents, especially low-income ones and African-Americans who’ve been disproportionately displaced, it drives away talented individuals who come to Cambridge to gain world-class skills. 
 
 It is time that candidates acknowledge what the residents of Cambridge have known for quite some time: we are facing twin crises of unaffordability and displacement, which exacerbate other issues such as homelessness. I believe in a Cambridge for all its residents, regardless of their income or documented status. That’s why as city councilor I will work to end displacement by pushing for tenant protections like rent stabilization policies, right of 1st refusal, right to counsel, and just cause evictions. But there’s another issue at play, which is that our city doesn’t have a housing plan other than allowing corporations to “build, build, build.” 
@@ -584,7 +584,7 @@ I am proud that our state bans discrimination in employment, credit and housing 
 													<td onClick="expandTable(this)">I think you asked thorough questions and I thank you for giving me an opportunity to engage with the MIT community. Our campaign is not accepting any money from corporate PACs or special interest groups and could use your help to bring our message of community-first to all of Cambridge, whether through a donation or volunteering.  If you want to learn more about my experience, my platform, or how to get involved,  go to <a href=www.votenicola.com> www.votenicola.com</a></td>
 												</tr>
 												<tr>
-													<td style="white-space: normal"> Jivan Sobrinho-Wheeler </td>
+													<td style="white-space: normal"><b>Jivan Sobrinho-Wheeler</b></td>
 													<td onClick="expandTable(this)">We have a housing crisis in Cambridge and much of the Boston region.  According to the <a href=https://www.cambridgema.gov/CDD/factsandmaps/demographicfaq>city’s own data</a> from the Community Development Department, the median rent for a 1-bedroom apartment is $2,300/month and the median condo costs $767,500.
  
 Much like healthcare, housing is currently treated as a commodity rather than a human right.  When it’s in short supply, the current owners of it charge high prices because they know they’ll be able to find people willing to pay it to have a roof over their heads.
@@ -619,7 +619,7 @@ As I mentioned above, I also have a plan to have the City of Cambridge make the 
 </td>
 												</tr>
 												<tr>
-													<td style="white-space: normal"> Quinton Zondervan</td>
+													<td style="white-space: normal"><b>Quinton Zondervan</b></td>
 													<td onClick="expandTable(this)">The underlying cause of the scarcity of affordable housing for students in Cambridge is the failure of the universities to construct and provide it, despite owning a lot of the land in our city. As an MIT alum myself, I can attest that this has long been a problem. In 2017 before I took office I stood with the MIT graduate students to demand more student housing as part of the institute’s Volpe upzoning, and after lots of organizing the students were able to secure an additional 450-bed commitment as part of the deal. This was a huge win for everybody involved, but it shouldn’t have taken that much effort to get what we got. MIT, Harvard, and Lesley should provide affordable, high quality housing for ALL students throughout their tenure. Period.
 
 Due to the lack of student housing, students are often forced to compete on the open market for housing. The open market isn’t affordable either, and there are two primary causes: the 1994 repeal of rent control, and acute demand caused by the city’s commercial development boom that has made Cambridge a global destination for tech & pharmaceutical workers, other professionals, and, unfortunately, real estate speculators. The demand is insatiable as we continue to add millions of square feet of commercial/lab development annually, and the hot market drives out renters, including section 8 tenants and traditional communities of color, who lack even the most basic of protections against eviction and rising rents. Of course, MIT’s development arm, MITIMCo, is responsible for much of the growth in this area- again, they’ve built all this stuff that has made the problem much worse, without even taking care of the needs of their students along the way!
@@ -650,7 +650,7 @@ Eversource has proposed massive grid expansion, including a substation in East C
 </td>
 												</tr>
 												<!-- <tr>
-													<td style="white-space: normal"></td>
+													<td style="white-space: normal"><b></b></td>
 													<td onClick="expandTable(this)"></td>
 													<td onClick="expandTable(this)"></td>
 													<td onClick="expandTable(this)"></td>
