updated home page
made election day bigger and added upcoming events to the events section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 											</h1>
 											<p>A non-partisan student organization dedicated to increasing voter turnout at MIT</p>
 										</header>
-										<p>Election day is November 5, 2019! MITvote is currently working to increase awareness and turnout for the 2019 municipal elections and looking forward to the 2020 primaries.</p>
+										<p><h2>Election day is November 5, 2019!</h2> MITvote is currently working to increase awareness and turnout for the 2019 municipal elections and looking forward to the 2020 primaries.</p>
 										<ul class="actions fit">
 											<li><a href="register-to-vote.html" class="button primary fit"  target="_blank">Register To Vote!</a></li>
 										</ul>
@@ -105,16 +105,16 @@
 									<div class="posts">
 										<article>
 											<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
-											<h3>Cambridge City Council Candidate Forum</h3>
-											<p>Hear a panel of former councilors talk about the role of the Cambridge City Council on student life, and meet the 2019 candidates. Discuss issues like housing, transportation, and climate change. Free dinner and desserts!! </p>
-											<ul class="actions">
+											<h3>Tomorrow Time</h3>
+											<p>Find MITvote at Tomorrow Time on Wednesday, October 23rd from 10am to 4pm in Lobby 13. We will be there to help you request or return your absentee ballot, answer your questions about how to vote, or help you find resources to educate yourself about the candidates.</p>
+											<!-- <ul class="actions">
 												<li><a href="https://www.facebook.com/events/922869911423090/" class="button"  target="_blank">More</a></li>
-											</ul>
+											</ul> -->
 										</article>
-										<!-- <article>
-											<h3>Chancellor's Ice Cream Social</h3>
-											<p>Eat some ice cream and come talk to MITvote! Stop by our booth on Kresge Lawn from 2 to 3 pm to register to vote, ask questions about the 2019 Cambridge City Council elections, or talk to us about getting involved!</p>
-										</article>-->
+										 <article>
+											<h3>Election Day!!!</h3>
+											<p>Find us in Lobby 7 on Election Day! We will be there to answer your voting questions, sign as a witness on your absentee ballot, help you educate yourself about the candidates, listen to your voting stories, and provide snacks! Come talk to us!</p>
+										</article>
 									</div>
 								</section>
 
