update to 2019 elections
where to vote section added to the page so students can check their polling place

--- a/2019-election.html
+++ b/2019-election.html
@@ -56,9 +56,13 @@
 									<hr class="major" />
 
 									<h2>Deadlines and Logistics</h2>
+									<h3>Deadlines</h3>
 									<p>The registration deadline to vote in the Cambridge City Council Elections is 20 days before the election on <strong>October 16th</strong></p>
 									<p>The deadline to cast an absentee ballot is <strong>November 4th</strong></p>
 									<p>The actual election occurs on <strong>Tuesday, November 5th</strong></p>
+									<h3>Where to Vote</h3>
+									<p>Most MIT addresses vote at Kresge, <strong>but that is not true for all dorms and FSILG's!!</strong> The MA Election commission website has a form that you can use to find your polling place. Put in the address you used to register to vote (your address in MA). Click <a href=https://www.sec.state.ma.us/wheredoivotema/bal/myelectioninfo.aspx>HERE</a> to be redirected to that form</p>
+									<h3>Actually Voting</h3>
 									<p>Cambridge city council is elected via a “proportional representation” system, also known as ranked choice voting. For more information on how to properly vote in this system, visit <a href=https://www.cambridgema.gov/Departments/electioncommission/cambridgemunicipalelections/>https://www.cambridgema.gov/Departments/electioncommission/cambridgemunicipalelections</a></p>
 
 									<hr class="major" />
