--- a/2019-election.html
+++ b/2019-election.html
@@ -61,14 +61,18 @@
 									<p>The deadline to cast an absentee ballot is <strong>November 4th</strong></p>
 									<p>The actual election occurs on <strong>Tuesday, November 5th</strong></p>
 									<h3>Where to Vote</h3>
-									<p>Most MIT addresses vote at Kresge, <strong>but that is not true for all dorms and FSILG's!!</strong> The MA Election commission website has a form that you can use to find your polling place. Put in the address you used to register to vote (your address in MA). Click <a href=https://www.sec.state.ma.us/wheredoivotema/bal/myelectioninfo.aspx>HERE</a> to be redirected to that form</p>
+									<p>Most MIT addresses vote at Kresge, <strong>but that is not true for all dorms and FSILG's!!</strong> The MA Election commission website has a form that you can use to find your polling place. Put in the address you used to register to vote (your address in MA). Click <a href=https://www.sec.state.ma.us/wheredoivotema/bal/myelectioninfo.aspx>HERE</a> to be redirected to that form.</p>
 									<h3>Actually Voting</h3>
 									<p>Cambridge city council is elected via a “proportional representation” system, also known as ranked choice voting. For more information on how to properly vote in this system, visit <a href=https://www.cambridgema.gov/Departments/electioncommission/cambridgemunicipalelections/>https://www.cambridgema.gov/Departments/electioncommission/cambridgemunicipalelections</a></p>
 
 									<hr class="major" />
 
 									<p><h2>Student Issues</h2></p>
-									<p>There are issues at stake in this city council election that are of direct importance to students here at MIT. To check out candidates responses to our survey on housing availability, transportation, international student issues and more, click on the questions of interest below.</p>
+									<p>There are issues at stake in this city council election that are of direct importance to students here at MIT. MITvote and the GSC together sent out a survey to all of the candidates with questions we believe are important to students. To check out candidates responses to our survey on housing availability, transportation, international student issues and more, click on the questions of interest below.</p>
+
+									<p><b>Please note that the candidates listed are not all of the candidates.</b> The candidates you see listed are the only ones that replied to our survey.</p>
+
+									<p>For background information on these issues and more resources to help you decide who to vote for, check out <a href=https://docs.google.com/document/d/1f_W8YEIQnZkMeMDtlrWcuoT2cm19z3jH0T260VhPpic/edit?usp=sharing> this primer</a> put together by the GSC. It contains a short summary of issues that are important to the 2019 election, some views from various political groups on those subjects, and information regarding endorsements. Click <a href=https://docs.google.com/document/d/1f_W8YEIQnZkMeMDtlrWcuoT2cm19z3jH0T260VhPpic/edit?usp=sharing> HERE</a> to be redirected to that document.</p>
 
 									<p class="expand-header" onClick="expandAccordian(this)">Question 1: What do you think is the underlying cause of the scarcity of affordable housing for students in Cambridge? What steps would you take to address this issue?</p>
 
