old update that I never commited
This is an old update to the website that I never committed to github

--- a/2019-election.html
+++ b/2019-election.html
@@ -67,12 +67,15 @@
 
 									<hr class="major" />
 
-									<p><h2>Student Issues</h2></p>
+									<p><h2>Getting Educated</h2><p>
+									<p><h3>GSC Primer</h3></p>
+									<p>For background information on these issues and more resources to help you decide who to vote for, check out <a href=statements/2019_City_Council_Election_Primer.pdf> this primer</a> put together by the GSC. It contains a short summary of issues that are important to the 2019 election, some views from various political groups on those subjects, and information regarding endorsements. Click <a href=statements/2019_City_Council_Election_Primer.pdf> HERE</a> to be redirected to that document.</p>
+
+									<p><h3>Student Issues Survey</h3></p>
 									<p>There are issues at stake in this city council election that are of direct importance to students here at MIT. MITvote and the GSC together sent out a survey to all of the candidates with questions we believe are important to students. To check out candidates responses to our survey on housing availability, transportation, international student issues and more, click on the questions of interest below.</p>
 
 									<p><b>Please note that the candidates listed are not all of the candidates.</b> The candidates you see listed are the only ones that replied to our survey.</p>
 
-									<p>For background information on these issues and more resources to help you decide who to vote for, check out <a href=https://docs.google.com/document/d/1f_W8YEIQnZkMeMDtlrWcuoT2cm19z3jH0T260VhPpic/edit?usp=sharing> this primer</a> put together by the GSC. It contains a short summary of issues that are important to the 2019 election, some views from various political groups on those subjects, and information regarding endorsements. Click <a href=https://docs.google.com/document/d/1f_W8YEIQnZkMeMDtlrWcuoT2cm19z3jH0T260VhPpic/edit?usp=sharing> HERE</a> to be redirected to that document.</p>
 
 									<p class="expand-header" onClick="expandAccordian(this)">Question 1: What do you think is the underlying cause of the scarcity of affordable housing for students in Cambridge? What steps would you take to address this issue?</p>
 
