final updates from Pat

--- a/index.html
+++ b/index.html
@@ -1,172 +1,54 @@
-<!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>MITvote - Home</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+<head>
+	<title>
+		MITvote - Home
+	</title>
 	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-
-							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo"><strong>MITvote</strong> </a>
-									<ul class="icons">
-										<li><a href="https://www.facebook.com/MITvote/" class="icon brands fa-facebook-f"  target="_blank"><span class="label">Facebook</span></a></li>
-									</ul>
-								</header>
-
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>MITvote<br />
-											</h1>
-											<p>A non-partisan student organization dedicated to increasing voter turnout at MIT</p>
-										</header>
-										<p><h2>Election day is November 5, 2019!</h2> MITvote is currently working to increase awareness and turnout for the 2019 municipal elections and looking forward to the 2020 primaries.</p>
-										<ul class="actions fit">
-											<li><a href="register-to-vote.html" class="button primary fit"  target="_blank">Register To Vote!</a></li>
-										</ul>
-										<ul class="actions fit">
-											<li><a href="about-us.html#join-us" class="button primary fit">Get Involved!</a></li>
-										</ul>
-									</div>
-									<span class="image object">
-										<img src="images/logo-crop.png" alt="" />
-									</span>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>What We Do</h2>
-									</header>
-									<div class="features">
-										<article>
-											<!-- Here is an example of a non-clicable icon
-											<span class="icon solid fa-person-booth"></span>
-											-->
-											<span><a href="2019-election.html" class="icon solid fa-person-booth"></a></span>
-											<div class="content">
-												<h3>2019 Elections</h3>
-												<p>Have questions about the 2019 Cambridge City elections? MITvote can help! Click here for general information and voter resources.</p>
-											</div>
-										</article>
-										<article>
-											<span><a href="2020-primaries.html" class="icon solid fa-vote-yea"></a></span>
-											<div class="content">
-												<h3>2020 Primaries</h3>
-												<p>Questions about the 2020 primaries? Want to make sure you are registered to vote in your state? Wondering when the primary is in your state? Click here for more information.</p>
-											</div>
-										</article>
-										<article>
-											<span><a href="activism.html" class="icon solid as fa-bullhorn"></a></span>
-											<div class="content">
-												<h3>Activism</h3>
-												<p>MITvote's mission is to make voting as accessible as possible to all people. In that vein, we work to support legislation that works towards these goals. For more information, click here!</p>
-											</div>
-										</article>
-										<article>
-											<span><a href="about-us.html" class="icon solid fa-question"></a></span>
-											<div class="content">
-												<h3>About Us and Get Involved!</h3>
-												<p>Want to learn more about MITvote the organization? Want to get involved and help us work towards a more civically engaged campus? Click here! </p>
-											</div>
-										</article>
-										<!-- <article>
-											<span><a href="stats-and-reports.html" class="icon solid fa-signal"></a></span>
-											<div class="content">
-												<h3>Statistics and Reports</h3>
-												<p>Curious about how civically engaged MIT is? Wondering how that's changed since MITvote has become active at MIT? Wondering what MITvote has done in the past? Click here!</p>
-											</div>
-										</article> -->
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>MITvote Events</h2>
-									</header>
-									<!-- <p>Nothing right now - check back soon!</p> -->
-									<div class="posts">
-										<article>
-											<!-- <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
-											<h3>Tomorrow Time</h3>
-											<p>Find MITvote at Tomorrow Time on Wednesday, October 23rd from 10am to 4pm in Lobby 13. We will be there to help you request or return your absentee ballot, answer your questions about how to vote, or help you find resources to educate yourself about the candidates.</p>
-											<!-- <ul class="actions">
-												<li><a href="https://www.facebook.com/events/922869911423090/" class="button"  target="_blank">More</a></li>
-											</ul> -->
-										</article>
-										 <article>
-											<h3>Election Day!!!</h3>
-											<p>Find us in Lobby 7 on Election Day! We will be there to answer your voting questions, sign as a witness on your absentee ballot, help you educate yourself about the candidates, listen to your voting stories, and provide snacks! Come talk to us!</p>
-										</article>
-									</div>
-								</section>
-
-						</div>
-					</div>
-
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
-
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="about-us.html">About Us</a></li>
-										<li><a href="2019-election.html">2019 Election</a></li>
-										<li><a href="2020-primaries.html">2020 Primaries</a></li>
-										<li><a href="activism.html">Activism</a></li>
-										<!-- <li><a href="stats-and-reports.html">Statistics and Reports</a></li> -->
-									</ul>
-								</nav>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Contact Us</h2>
-									</header>
-									<p>Feel free to email us with any questions you have about voting, getting involved, or anything else we can help you with! We will also have weekly meetings once the semester starts which you are welcome to attend!</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">vote-exec@mit.edu</a></li>
-									</ul>
-								</section>
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
-
-						</div>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+  <body>
+  <link rel="stylesheet" type="text/css" href="main.css">
+    <!-- LOGO AND NAVIGATION -->
+    <div class="logo"><a href="/">
+  <img class="banner logo" src='images/logo-crop.png'/>
+    </a>
+    <div class='topnav'>
+      <div class="active"><h3><a href="">HOME</a></h3></div>
+      <div class="color one"><h3><a href="about/">ABOUT US</a></h3></div>
+      <div class="color one"><h3><a href="register-to-vote/">REGISTER TO VOTE</a></h3></div>
+      <div class="color one"><h3><a href="absentee-voting/">ABSENTEE VOTING</a></h3></div>
+      <div class="color one"><h3><a href="2020-primaries/">2020 PRIMARIES</a></h3></div>
+      <div class="color one"><h3><a href="activism/">ACTIVISM</a></h3></div>
+    </div>
+</div>
+        <!-- END LOGO & NAVIGATION -->
+        <div class="card-thing">
+        <div class="main-section">
+          <section>
+            <div class="text-box left">
+              <h1>MITvote</h1>
+              <p>A non-partisan student organization at MIT, MITvote is currently working to increase awareness and voter turnout for the 2020 primaries.</p>
+              <!--<h2 class="colorpink">Election Day in MA is Tuesday, March 3rd!</h2>-->
+            </div>
+            <div>
+              <span class="image object">
+                    <img class="logo-text" src="images/logo-crop.png" style="width: 250px" alt="" />
+                  </span>
+                </div>
+              </section>
+              <section class="center">
+                <div class="text-box small">
+              <button class="flatboi color one" onclick="window.location.assign('register-to-vote/')">REGISTER TO VOTE!</button><br/>
+              <button class="flatboi color one" onclick="window.location.assign('absentee-voting/')">ABSENTEE VOTING</button>
+            </div>
+          </section>
+</div>
+</div>
+<div class="footer">
+  <div class="text-box small">
+  Feel free to email us with any questions you have about voting, getting involved, or anything else. We have weekly meetings, which you are welcome to attend.
+  <br/><br/>
+  <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a>
+</div>
+  </div>
+  </body>
 </html>
