--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,7 @@
       <div class="active"><h3><a href="">ABOUT US</a></h3></div>
       <div class="color one"><h3><a href="../register-to-vote/">REGISTER TO VOTE</a></h3></div>
       <div class="color one"><h3><a href="../absentee-voting/">ABSENTEE VOTING</a></h3></div>
+      <div class="color one"><h3><a href="../2020-general/">2020 GENERAL</a></h3></div>
       <div class="color one"><h3><a href="../2020-primaries/">2020 PRIMARIES</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
@@ -33,7 +34,7 @@
             </div>
           </div>
             <div class="text-box left">
-              <h2>MITvote is a nonpartisan group of graduates and undergraduates with the goal of engaging an active voter community on campus. Our mission is to make voting as accessible as possible to everyone and encourage civic participation on MIT's campus.</h2>
+              <h4>MITvote is a nonpartisan group of graduates and undergraduates with the goal of engaging an active voter community on campus. Our mission is to make voting as accessible as possible to everyone and encourage civic participation on MIT's campus.</h4>
                 <p>We organize voter registration drives, hold absentee ballots events, provide information on how to vote to students, and connect students with voter resources. We work to raise awareness of upcoming elections and educate students on how to participate in the civic process. We participate in activism surrounding voter issues and support legislation like same-day voter registration, expanding early voting, and non-citizen voting in municipal elections.</p>
               </div>
             <div class='imagespan'>
@@ -42,6 +43,8 @@
               </div>
             </div>
             <div class="text-box left">
+              <h2>Reflections on 2019</h2>
+                  <p>After the 2019 election season, MITvote wrote a report detailing our activities in 2019, similar to our 2018 report. We found that while turnout decreased in most precincts in Cambridge, turnout increased in MIT precincts. Read the entire report <a href=https://drive.google.com/file/d/1en5MxnLRuvF0BU5yfMT_Ai2e8sGg5yPU/view?usp=sharing>HERE.</a></p>
               <h2>Reflections on 2018</h2>
                   <p>After the 2018 election season, MITvote wrote a report detailing our actions leading up the election and our success. We found <strong>196% increase</strong> in voter turnout on campus in the 2018 midterm elections over the 2014 midterm elections. If you would like to learn more about what MITvote has done in the past, what worked, what didn't and how voter registration and turnout changed in 2018, check out that report <a href=https://drive.google.com/file/d/19tNFgs75q9pwYHZnvZpXlsqEInxK8CIG/view?usp=sharing/> HERE!</a><p>
                   <p>Email <a href='mailto:vote-exec@mit.edu'>vote-exec@mit.edu</a> if you have any questions!</p>
