--- a/absentee-voting/index.html
+++ b/absentee-voting/index.html
@@ -16,6 +16,7 @@
       <div class="color one"><h3><a href="../about/">ABOUT US</a></h3></div>
       <div class="color one"><h3><a href="../register-to-vote/">REGISTER TO VOTE</a></h3></div>
       <div class="active"><h3><a href="">ABSENTEE VOTING</a></h3></div>
+      <div class="color one"><h3><a href="../2020-general/">2020 GENERAL</a></h3></div>
       <div class="color one"><h3><a href="../2020-primaries/">2020 PRIMARIES</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
@@ -26,7 +27,7 @@
           <section>
             <div class="text-box left">
           <h1>Absentee Voting</h1>
-                <p><b>COVID-19 UPDATE: If you requested an absentee ballot but you will now be home to vote, you may need to contact your board of elections to update that information. Email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> for assistance.</b></p>
+                <p class='highlight'>COVID-19 UPDATE: If you requested an absentee ballot but you will now be home to vote, you may need to contact your board of elections to update that information. Email vote-exec@mit.edu for assistance.</p>
                 <p>MITvote is always happy to help you through the specific absentee voting process for your state! Be on the lookout for absentee ballot office hours, or feel free to email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with any questions!</p> 
                   <p>Click the button below for more information on elections in other states.</p>
                   <div class="text-box small">
