--- a/register-to-vote/index.html
+++ b/register-to-vote/index.html
@@ -16,6 +16,7 @@
       <div class="color one"><h3><a href="../about/">ABOUT US</a></h3></div>
       <div class="active"><h3><a href="">REGISTER TO VOTE</a></h3></div>
       <div class="color one"><h3><a href="../absentee-voting/">ABSENTEE VOTING</a></h3></div>
+      <div class="color one"><h3><a href="../2020-general/">2020 GENERAL</a></h3></div>
       <div class="color one"><h3><a href="../2020-primaries/">2020 PRIMARIES</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
