change to vote 411 and small edits

--- a/2020-general/index.html
+++ b/2020-general/index.html
@@ -52,7 +52,7 @@
               <h2>Voting in Other States</h2>
                 <p>Click the button below for more information on elections in other states.</p>
                     <div class="text-box small">
-                    <button class="flatboi color one" onclick="window.open('https://www.campusvoteproject.org/state-student-voting-guides')">VOTING GUIDE BY STATE</button>
+                    <button class="flatboi color one" onclick="window.open('https://www.vote411.org/select-state')">VOTING GUIDE BY STATE</button>
                     </div>
               <h2>What if I'm registered in MA but now I won't be there this November because of COVID?</h2>
                 <p><b>Request an absentee ballot!</b> To request an absentee ballot, fill out this <a href="https://www.sec.state.ma.us/ele/elepdf/absentee/English-Absentee-Ballot-Application.pdf">absentee ballot application</a> and mail it to your local election commission. If you are registered to vote in Cambridge, mail your completed application to the Cambridge Election Commision at the following address:<br> 
