--- a/absentee-voting/index.html
+++ b/absentee-voting/index.html
@@ -31,7 +31,7 @@
                 <p>MITvote is always happy to help you through the specific absentee voting process for your state! Be on the lookout for absentee ballot office hours, or feel free to email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with any questions!</p> 
                   <p>Click the button below for more information on elections in other states.</p>
                   <div class="text-box small">
-                  <button class="flatboi color one" onclick="window.open('https://www.campusvoteproject.org/state-student-voting-guides')">VOTING GUIDE BY STATE</button>
+                  <button class="flatboi color one" onclick="window.open('https://www.vote411.org/select-state')">VOTING GUIDE BY STATE</button>
                 </div>
               <h2>Stamp Squad</h2>
               <p>MITvote provides free envelopes and stamps to students that need them to send in election-related materials. Email <a href="mailto:stampsquad@mit.edu">stampsquad@mit.edu</a> to ask for envelopes or stamps, and we will meet you somewhere on campus to hand it off!</p>
