--- a/register-to-vote/index.html
+++ b/register-to-vote/index.html
@@ -37,7 +37,7 @@
                   <p>If you are an MIT student, you can use TurboVote to register to vote. Click the button below to be redirected to  TurboVote. MIT uses TurboVote to make the process of registering to vote easier and more straightforward for students.</p>
                   <div class="text-box small">
                   <button class="flatboi color one" onclick="window.open('https://mit.turbovote.org/','_blank')">TURBOVOTE</button>
-                  <button class="flatboi color one" onclick="window.open('https://www.campusvoteproject.org/state-student-voting-guides')">VOTING GUIDE BY STATE</button>
+                  <button class="flatboi color one" onclick="window.open('https://www.vote411.org/select-state')">VOTING GUIDE BY STATE</button>
                 </div>
               <h2>Other Options</h2>
                   <p>Otherwise, you can always Google "register to vote" + your state to find voter registration information. If you would like any help with the voter registration process, find an MITvote liaison in your living group or department, or feel free to email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with questions any time.</p>
