--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <div class="active"><h3><a href="">HOME</a></h3></div>
       <div class="color one"><h3><a href="about/">ABOUT US</a></h3></div>
       <div class="color one"><h3><a href="register-to-vote/">REGISTER TO VOTE</a></h3></div>
-      <div class="color one"><h3><a href="absentee-voting/">ABSENTEE VOTING</a></h3></div>
       <div class="color one"><h3><a href="2020-general/">2020 GENERAL</a></h3></div>
       <div class="color one"><h3><a href="2020-primaries/">2020 PRIMARIES</a></h3></div>
       <div class="color one"><h3><a href="activism/">ACTIVISM</a></h3></div>
@@ -39,8 +38,7 @@
               </section>
               <section class="center">
                 <div class="text-box small">
-              <button class="flatboi color one" onclick="window.location.assign('register-to-vote/')">REGISTER TO VOTE!</button><br/>
-              <button class="flatboi color one" onclick="window.location.assign('absentee-voting/')">ABSENTEE VOTING</button>
+              <button class="flatboi color one" onclick="window.location.assign('register-to-vote/')">REGISTER TO VOTE!</button>
             </div>
           </section>
           <!--<section>
