changes for last push to 2020 election

--- a/2020-primaries/index.html
+++ b/2020-primaries/index.html
@@ -31,6 +31,9 @@
               <h2>Massachusetts Primary</h2>
               <p><h4>The Massachusetts 2020 Primary will be held on September 1st, 2020!</h4></p>
               <p>The presidential primary was held on March 3rd, but all other primary races in MA will take place on September 1st. This includes the MA Senate primary.</p>
+              <div class="text-box small">
+                <button class="flatboi color one" onclick="window.open('2020_MA_Primary_Voter_Guide.pdf')">GSC VOTER GUIDE</button>
+              </div>
               <h4>MA Primary Dates and Deadlines</h4>
               <ul>
                 <li>Register to vote - August 22nd</li>
@@ -41,6 +44,7 @@
               <p>A semi-closed primary means that if you are registered with a particular party, you must vote in that party's primary. If you are registered as an independent, you may choose which party's primary you wish to vote in. If you would like to check which party you are registered with, check your voter registration on the Secretary of State's website <a href="https://www.sec.state.ma.us/voterregistrationsearch/myvoterregstatus.aspx">HERE.</a></p>
               <h4>Voting in the MA primary</h4>
               <p>Massachusetts has recently passed a new law allowing all registered voters to <a href="https://www.sec.state.ma.us/ele/covid-19/covid-19.htm">vote by mail</a> in any 2020 election, including the Primary (September 1) and the General Election (November 3). A <a href="https://www.sec.state.ma.us/ele/elepdf/2020-Vote-by-Mail-Application.pdf">2020 Vote by Mail Application</a> will be mailed to all registered voters after July 15. <b>It is strongly recommended to fill out and return your application as soon as possible so that you will receive your ballot in time.</b> You can request a mail-in ballot for both the Primary and the General Election using <a href="https://www.sec.state.ma.us/ele/elepdf/2020-Vote-by-Mail-Application.pdf">this form</a>. After sending in your application, you can track your mail-in ballot <a href="https://www.sec.state.ma.us/wheredoivotema/track/trackmyballot.aspx">here</a>. Ballots for the Primary will be mailed to voters in early August.</p>
+              <p>You can also still vote in person for the MA primaries. On Election Day, polls are open from 7am to 8pm. You can find your polling place <a href="http://www.sec.state.ma.us/WhereDoIVoteMA/bal/MyElectionInfo.aspx">HERE.</a> Early voting is also available from August 22nd to August 28th. Cambridge early voting locations and hours will be posted <a href="https://www.cambridgema.gov/Departments/electioncommission/earlyvoting">HERE</a> one week before. Early voting locations and hours elsewhere in MA can be found <a href="https://www.sec.state.ma.us/ele/eleev/early-voting-in-person.htm">HERE</a> one week before the election.</p>
               <h2>Primaries in Other States</h2>
                   <p>Click the button below for more information on elections in other states.</p>
                   <div class="text-box small">
