--- a/register-to-vote/index.html
+++ b/register-to-vote/index.html
@@ -16,7 +16,6 @@
       <div class="color one"><h3><a href="../about/">ABOUT US</a></h3></div>
       <div class="active"><h3><a href="">REGISTER TO VOTE</a></h3></div>
       <div class="color one"><h3><a href="../2020-general/">2020 GENERAL</a></h3></div>
-      <div class="color one"><h3><a href="../2020-primaries/">2020 PRIMARIES</a></h3></div>
       <div class="color one"><h3><a href="../activism/">ACTIVISM</a></h3></div>
     </div>
 </div>
@@ -33,11 +32,12 @@
                 <button class="flatboi color one" onclick="window.open('https://www.sec.state.ma.us/ovr/','_blank')">REGISTER</button>
               </div>
               <h2>Register Out of State - TurboVote</h2>
-                  <p>If you are an MIT student, you can use TurboVote to register to vote. Click the button below to be redirected to  TurboVote. MIT uses TurboVote to make the process of registering to vote easier and more straightforward for students.</p>
+                  <p>If you are an MIT student, you can use TurboVote to register to vote. Click the button below to be redirected to  TurboVote. MIT uses TurboVote to make the process of registering to vote easier and more straightforward for students. Check out our short TurboVote guide to avoid common mistakes and make sure you get registered!</p>
                   <div class="text-box small">
-                  <button class="flatboi color one" onclick="window.open('https://mit.turbovote.org/','_blank')">TURBOVOTE</button>
-                  <button class="flatboi color one" onclick="window.open('https://www.vote411.org/select-state')">VOTING GUIDE BY STATE</button>
-                </div>
+                    <button class="flatboi-two color one" style="float: left;" onclick="window.open('https://mit.turbovote.org/','_blank')">TURBOVOTE</button>
+                    <button class="flatboi-two color one" style="float: right;" onclick="window.open('../turbovote-help/', '_blank')">TURBOVOTE GUIDE</button>
+                    <button class="flatboi color one" onclick="window.open('https://www.vote411.org/select-state')">VOTING GUIDE BY STATE</button>
+                  </div>
               <h2>Other Options</h2>
                   <p>Otherwise, you can always Google "register to vote" + your state to find voter registration information. If you would like any help with the voter registration process, find an MITvote liaison in your living group or department, or feel free to email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with questions any time.</p>
           </section>
