impact of your vote and MA reg help

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <section>
           <div class="text-box left">
             <h2>Impact of Your Vote</h2>
-            <center><iframe src="https://drive.google.com/file/d/1DUfP7m0sEwi3xr4LIBo7E2mq0BNAyaIK/preview" width="640" height="480"></iframe></center>
+            <center><iframe width="560" height="315" src="https://www.youtube.com/embed/yzZTF-c-7Sw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
             <p>Unsure about whether to vote in the 2020 election, or if your vote really matters? (Spoiler: it does!).</p>
             <p>Listen to our panel "The Impact of Your Vote: How your vote up and down the ballot affects the issues you care about" to learn from panelists about how your vote in races beyond the presidency has an impact on issues like climate change, racial justice and more!</p>
             <p>We heard from: 
@@ -56,6 +56,7 @@
               </ul>
               The panel was moderated by David Goldston, director of the MIT Washington Office.
             </p>
+            <p>You can find small, targeted clips of the panel on the MITvote YouTube channel found <a href="https://www.youtube.com/channel/UCF9VMjdB3Rwaar14oZoRkEA/">HERE</a>.</p>
           </section>
         </div>
       </div>
