added cambrdige early voting info

--- a/2020-general/index.html
+++ b/2020-general/index.html
@@ -45,7 +45,7 @@
                   <br>
                   You can find contact information for all local election commissions in MA <a href="https://www.sec.state.ma.us/ele/eleclk/clkidx.htm">HERE.</a> <b>Make sure to request your mail-in ballot early! Lots of people will be requesting mail-in ballots due to COVID-19, and you want to be sure it gets to you in time.</b> You can find more information about elections and COVID-19 in MA <a href="https://www.sec.state.ma.us/ele/covid-19/covid-19.htm">HERE.</a> Email <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with any questions!</p>
                 <h4>Early Voting</h4>
-                  <p>Early voting will be held from October 17th to October 30th. Times and locations for early voting in Cambridge are TBD.</p>
+                  <p>Early voting will be held from October 17th to October 30th. Times and locations for early voting in Cambridge can be found <a href="https://www.cambridgema.gov/Departments/electioncommission/earlyvoting/earlyvotinginperson" target="_blank">here</a>.</p>
                 <h4>Voting in Person on Election Day</h4>
                   <p>If you plan to vote in person in MA on election day, you can find your polling place using <a href="https://www.sec.state.ma.us/wheredoivotema/bal/myelectioninfo.aspx">this website.</a> If you are registered at a dorm other than Random or EC, your polling place is probably Kresge, but you should verify that. Polls are open from 7am to 8pm. Contanct <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with any questions.</p>
               <h2>Voting in Other States</h2>
