gsc ballot questions voter guide

--- a/2020-general/index.html
+++ b/2020-general/index.html
@@ -48,6 +48,8 @@
                   <p>Early voting will be held from October 17th to October 30th. Times and locations for early voting in Cambridge can be found <a href="https://www.cambridgema.gov/Departments/electioncommission/earlyvoting/earlyvotinginperson" target="_blank">here</a>.</p>
                 <h4>Voting in Person on Election Day</h4>
                   <p>If you plan to vote in person in MA on election day, you can find your polling place using <a href="https://www.sec.state.ma.us/wheredoivotema/bal/myelectioninfo.aspx">this website.</a> If you are registered at a dorm other than Random or EC, your polling place is probably Kresge, but you should verify that. Polls are open from 7am to 8pm. Contanct <a href="mailto:vote-exec@mit.edu">vote-exec@mit.edu</a> with any questions.</p>
+                <h4>Voter Information</h4>
+                  <p>The Graduate Student Council has prepared a voter guide with information on the MA ballot questions. Find that <a href="GSC_Ballot_Questions_2020.pdf" target="_blank">HERE.</a></p>
               <h2>Voting in Other States</h2>
                 <p>Click the button below for more information on elections in other states.</p>
                     <div class="text-box small">
